--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -7,8 +7,8 @@ a {
   color: #00B7FF;
 }
 
-.costumeAttr {
-  background-color: aquamarine;
+.HousesAttr {
+  background-color: rgb(19, 169, 119);
   width: 120px;
  }
  
