--- a/views/Housesdetail.pug
+++ b/views/Housesdetail.pug
@@ -24,4 +24,8 @@ block content
         div #{Houseshouse_price}
         br
 
-        
+style 
+.HousesAttr {
+  background-color: rgb(19, 169, 119);
+  width: 120px;
+ }
