--- a/views/Housesdetail.pug
+++ b/views/Housesdetail.pug
@@ -6,20 +6,20 @@ block content
   - let Houseshouse_name = toShow.house_name
   - let Houseshouse_size = toShow.house_size
   - let Houseshouse_price = toShow.house_price
+  
   div
     div.row
-      div(class='HousesAttr mr-4') Houses ID is:
-        div #{Housesid}
-        br
+      div(class='HousesAttr mr-3') Houses ID is:
+      div #{Housesid}
+      
     div.row
-      div(class='HousesAttr mr-4') Houses Taste is:
-        div #{Houseshouse_name}
-        br
+      div(class='HousesAttr mr-3') Houses Type is:
+      div #{Houseshouse_name}
+      
     div.row
-      div(class='HousesAttr mr-4') Houses Texture is:
-        div #{Houseshouse_size}
-        br
+      div(class='HousesAttr mr-3') Houses Size is:
+      div #{Houseshouse_size}
+      
     div.row
-      div(class='HousesAttr mr-4') Houses Temperature is:
-        div #{Houseshouse_price}
-        br
+      div(class='HousesAttr mr-3') Houses Cost is:
+      div #{Houseshouse_price}
