--- a/views/Housesupdate.pug
+++ b/views/Housesupdate.pug
@@ -16,10 +16,10 @@ block content
         label.HousesAttr(for='house_name') Houses name
         input#house_name(type='text', name='house_name', value=Houseshouse_name)
       div.form-group
-        label.HousesAttr(for='house_size') Costume size
+        label.HousesAttr(for='house_size') Houses size
         input#house_size(type='text', name='house_size', value=Houseshouse_size)
       div.form-group
-        label.HousesAttr(for='house_price') Costume cost
+        label.HousesAttr(for='house_price') Houses cost
         input#house_price(type='number', name='house_price', value=Houseshouse_price)
       input(type="submit")
     script.
