--- a/views/index.pug
+++ b/views/index.pug
@@ -1,17 +1,12 @@
 extends layout
 
 block content
-  h1= title
-  p Welcome to maryville #{title}
-  button(type="button" class="btn btn-secondary" onclick="goFaster()") Press Me
-  br
-  a(href='http://localhost:3000/Houses') Click Here to Visit Houses Website
-  div#faster Increase the speed
-   script.
-    let mph = 20;
-    let change = 1;
-    function goFaster() {
-      mph += change;
-      change += 1;
-      document.getElementById('faster').textContent = `MPH ${mph} with change ${change}`;
-    }
+  if (!user)
+    a(href="/login") Login
+    br
+    a(href="/register") Register
+  if (user)
+    p You are currently logged in as #{user.username}
+    a(href="/houses") Take me to houses
+    br
+    a(href="/logout") Logout
